Additional login buttons

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <textarea id="payload">bwAAAAMACW9wZXJhdGlvbnMADnJlYWQtYXR0cmlidXRlAARuYW1lcwAMcHJvY2Vzcy10eXBlAAdhZGRyZXNzbAAAAAA=</textarea>
         </li>
         <li>
+            <button onclick="loginUsingSyncXmlHttpRequest()">Login (sync request)</button>&nbsp;&nbsp;&nbsp;
+            <button onclick="loginUsingAsyncXmlHttpRequest()">Login (async request)</button>&nbsp;&nbsp;&nbsp;
+            <button onclick="loginUsingIframe()">Login (iframe)</button>&nbsp;&nbsp;&nbsp;
             <button onclick="send()">Send</button>
         </li>
     </ul>
